--- a/domino-ui-demo/css/dropdown/dropdown.css
+++ b/domino-ui-demo/css/dropdown/dropdown.css
@@ -82,7 +82,6 @@
 /* Dropdown Menu =============================== */
 .dropdown {
     position: absolute;
-    z-index: 11;
     background-color: #fff;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
@@ -254,10 +253,17 @@
     background-color: rgba(0, 0, 0, 0.075);
 }
 
-.dropdown-menu > li > a i.material-icons {
+.dropdown-menu > li > a i.material-icons{
     float: left;
     margin-right: 7px;
     margin-top: 2px;
+    font-size: 20px;
+}
+
+.dropdown-menu > li > a i.mdi::before {
+    float: left;
+    margin-right: 7px;
+    margin-top: -1px;
     font-size: 20px;
 }
 
