--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -111,12 +111,27 @@ section.content.fit-height {
     margin: 20px 0px 0 400px;
 }
 
+.sm .footer.fixed {
+    width: calc(100% - 100px);
+}
+
+.md .footer.fixed {
+    width: calc(100% - 300px);
+}
+
+.lg .footer.fixed {
+    width: calc(100% - 400px);
+}
+
 .ls-closed.sm .footer,
 .ls-closed.md .footer,
 .ls-closed.lg .footer {
     margin-left: 0px;
 }
 
+.ls-closed .footer.fixed {
+    width: 100%;
+}
 
 .footer.fit-height {
     margin-top: 0px;
@@ -126,7 +141,6 @@ section.content.fit-height {
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
     z-index: 9;
 }
 
@@ -191,9 +205,6 @@ section.content.fit-height {
     transform: scale(0);
 }
 
-.ls-closed .navbar-brand {
-    margin-left: 30px;
-}
 
 .overlay-open .bars:before {
     -moz-transform: scale(0);
@@ -211,19 +222,9 @@ section.content.fit-height {
     transform: scale(1);
 }
 
-.navbar-header {
-    padding: 10px 7px;
-}
-
 .navbar-header .bars {
     float: left;
     text-decoration: none;
-}
-
-.navbar-nav > li > a {
-    padding: 7px 7px 2px 7px;
-    margin-top: 17px;
-    margin-left: 5px;
 }
 
 .sm .sidebar.slide-out-left {
@@ -1871,23 +1872,23 @@ section.content.fit-height {
     font-size: 72px;
 }
 
-.b-b-0{
+.b-b-0 {
     border-bottom: 0px;
 }
 
-.b-t-0{
+.b-t-0 {
     border-top: 0px;
 }
 
-.b-l-0{
+.b-l-0 {
     border-left: 0px;
 }
 
-.b-r-0{
+.b-r-0 {
     border-right: 0px;
 }
 
-.b-0{
+.b-0 {
     border: 0px;
 }
 
@@ -1931,28 +1932,6 @@ section.content.fit-height {
     text-decoration: overline;
 }
 
-.block-header {
-    margin-bottom: 15px;
-}
-
-.block-header h2 {
-    margin: 0 !important;
-    color: #666 !important;
-    font-weight: normal;
-    font-size: 16px;
-}
-
-.block-header h2 small {
-    display: block;
-    font-size: 12px;
-    margin-top: 8px;
-    color: #888;
-}
-
-.block-header h2 small a {
-    font-weight: bold;
-    color: #777;
-}
 
 /* Custom Animate ============================== */
 @-ms-keyframes spin {
@@ -2341,12 +2320,6 @@ section.content.fit-height {
         width: 55%;
     }
 
-    .navbar .navbar-header {
-        display: inline-block;
-        margin-bottom: -6px;
-        width: calc(100% + 30px);
-    }
-
     .navbar .nav > li {
         display: inline-block;
     }
@@ -2660,451 +2633,7 @@ input[type=range] + .thumb.active .value {
 
 
 /* Infobox ===================================== */
-.info-box {
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    height: auto;
-    display: flex;
-    cursor: default;
-    background-color: #fff;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px;
-}
 
-.info-box .icon {
-    display: inline-block;
-    text-align: center;
-    min-width: 80px;
-    width: 80px;
-}
-
-.info-box .icon:not([class*="bg-white"]) i {
-    color: #fff;
-}
-
-.info-box .icon i,
-.info-box .icon i.mdi:before {
-    font-size: 50px;
-    line-height: 80px;
-}
-
-.info-box .icon .chart.chart-bar {
-    height: 100%;
-    line-height: 100px;
-}
-
-.info-box .icon .chart.chart-bar canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box .icon .chart.chart-pie {
-    height: 100%;
-    line-height: 123px;
-}
-
-.info-box .icon .chart.chart-pie canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box .icon .chart.chart-line {
-    height: 100%;
-    line-height: 115px;
-}
-
-.info-box .icon .chart.chart-line canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box .info-content {
-    display: inline-block;
-    padding: 7px 10px;
-}
-
-.info-box .info-content .text {
-    font-size: 13px;
-    margin-top: 11px;
-}
-
-.info-box:not([class*="bg-"]) .info-content .text,
-.info-box:not([class*="bg-"]) .info-content .number,
-.info-box-2:not([class*="bg-"]) .info-content .text,
-.info-box-2:not([class*="bg-"]) .info-content .number,
-.info-box-3:not([class*="bg-"]) .info-content .text,
-.info-box-3:not([class*="bg-"]) .info-content .number,
-.info-box-4:not([class*="bg-"]) .info-content .text,
-.info-box-4:not([class*="bg-"]) .info-content .number {
-    color: #555;
-}
-
-.info-box .info-content .number {
-    font-weight: normal;
-    font-size: 26px;
-    margin-top: -4px;
-}
-
-.info-box.hover-zoom-effect .icon {
-    overflow: hidden;
-}
-
-.info-box.hover-zoom-effect .icon i,
-.info-box.hover-zoom-effect .icon i.mdi:before {
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.info-box.hover-zoom-effect:hover .icon i,
-.info-box.hover-zoom-effect:hover .icon i.mdi:before {
-    opacity: 0.4;
-    -moz-transform: rotate(-32deg) scale(1.4);
-    -ms-transform: rotate(-32deg) scale(1.4);
-    -o-transform: rotate(-32deg) scale(1.4);
-    -webkit-transform: rotate(-32deg) scale(1.4);
-    transform: rotate(-32deg) scale(1.4);
-}
-
-.info-box.hover-expand-effect:after {
-    background-color: rgba(0, 0, 0, 0.05);
-    content: ".";
-    position: absolute;
-    left: 80px;
-    top: 0;
-    width: 0;
-    height: 100%;
-    color: transparent;
-    -moz-transition: all 0.95s;
-    -o-transition: all 0.95s;
-    -webkit-transition: all 0.95s;
-    transition: all 0.95s;
-}
-
-.info-box.hover-expand-effect:hover:after {
-    width: 100%;
-}
-
-.info-box-2 {
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    height: 80px;
-    display: flex;
-    cursor: default;
-    background-color: #fff;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px;
-}
-
-.info-box-2 .icon {
-    display: inline-block;
-    text-align: center;
-    width: 80px;
-    min-width: 80px;
-}
-
-.info-box-2 .icon i {
-    color: #fff;
-    font-size: 50px;
-    line-height: 80px;
-}
-
-.info-box-2 .chart.chart-bar {
-    height: 100%;
-    line-height: 105px;
-}
-
-.info-box-2 .chart.chart-bar canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-2 .chart.chart-pie {
-    height: 100%;
-    line-height: 123px;
-}
-
-.info-box-2 .chart.chart-pie canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-2 .chart.chart-line {
-    height: 100%;
-    line-height: 115px;
-}
-
-.info-box-2 .chart.chart-line canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-2 .info-content {
-    display: inline-block;
-    padding: 7px 10px;
-}
-
-.info-box-2 .info-content .text {
-    font-size: 13px;
-    margin-top: 11px;
-}
-
-.info-box-2 .info-content .number {
-    font-weight: normal;
-    font-size: 26px;
-    margin-top: -4px;
-}
-
-.info-box-2.hover-zoom-effect .icon {
-    overflow: hidden;
-}
-
-.info-box-2.hover-zoom-effect .icon i,
-.info-box-2.hover-zoom-effect .icon i.mdi:before {
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.info-box-2.hover-zoom-effect:hover .icon i,
-.info-box-2.hover-zoom-effect:hover .icon i.mdi:before {
-    opacity: 0.4;
-    -moz-transform: rotate(-32deg) scale(1.4);
-    -ms-transform: rotate(-32deg) scale(1.4);
-    -o-transform: rotate(-32deg) scale(1.4);
-    -webkit-transform: rotate(-32deg) scale(1.4);
-    transform: rotate(-32deg) scale(1.4);
-}
-
-.info-box-2.hover-expand-effect:after {
-    background-color: rgba(0, 0, 0, 0.05);
-    content: ".";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 100%;
-    color: transparent;
-    -moz-transition: all 0.95s;
-    -o-transition: all 0.95s;
-    -webkit-transition: all 0.95s;
-    transition: all 0.95s;
-}
-
-.info-box-2.hover-expand-effect:hover:after {
-    width: 100%;
-}
-
-.info-box-3 {
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    height: 80px;
-    display: flex;
-    cursor: default;
-    background-color: #fff;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px;
-}
-
-.info-box-3 .icon {
-    position: absolute;
-    right: 10px;
-    bottom: 2px;
-    text-align: center;
-    min-width: 80px;
-    width: 80px;
-}
-
-.info-box-3 .icon i {
-    font-size: 60px;
-}
-
-.info-box-3 .chart {
-    margin-right: 5px;
-}
-
-.info-box-3 .chart.chart-bar {
-    height: 100%;
-    line-height: 50px;
-}
-
-.info-box-3 .chart.chart-bar canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-3 .chart.chart-pie {
-    height: 100%;
-    line-height: 34px;
-}
-
-.info-box-3 .chart.chart-pie canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-3 .chart.chart-line {
-    height: 100%;
-    line-height: 40px;
-}
-
-.info-box-3 .chart.chart-line canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-3 .info-content {
-    display: inline-block;
-    padding: 7px 16px;
-}
-
-.info-box-3 .info-content .text {
-    font-size: 13px;
-    margin-top: 11px;
-}
-
-.info-box-3 .info-content .number {
-    font-weight: normal;
-    font-size: 26px;
-    margin-top: -4px;
-}
-
-.info-box-3.hover-zoom-effect .icon i,
-.info-box-3.hover-zoom-effect .icon i.mdi:before {
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.info-box-3.hover-zoom-effect:hover .icon i,
-.info-box-3.hover-zoom-effect:hover .icon i.mdi:before {
-    opacity: 0.4;
-    -moz-transform: rotate(-32deg) scale(1.4);
-    -ms-transform: rotate(-32deg) scale(1.4);
-    -o-transform: rotate(-32deg) scale(1.4);
-    -webkit-transform: rotate(-32deg) scale(1.4);
-    transform: rotate(-32deg) scale(1.4);
-}
-
-.info-box-3.hover-expand-effect:after {
-    background-color: rgba(0, 0, 0, 0.05);
-    content: ".";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 100%;
-    color: transparent;
-    -moz-transition: all 0.95s;
-    -o-transition: all 0.95s;
-    -webkit-transition: all 0.95s;
-    transition: all 0.95s;
-}
-
-.info-box-3.hover-expand-effect:hover:after {
-    width: 100%;
-}
-
-.info-box-4 {
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    height: 80px;
-    display: flex;
-    cursor: default;
-    background-color: #fff;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px;
-}
-
-.info-box-4 .icon {
-    position: absolute;
-    right: 10px;
-    bottom: 2px;
-    text-align: center;
-}
-
-.info-box-4 .icon i {
-    font-size: 60px;
-}
-
-.info-box-4 .chart {
-    margin-right: 5px;
-}
-
-.info-box-4 .chart.chart-bar {
-    height: 100%;
-    line-height: 50px;
-}
-
-.info-box-4 .chart.chart-bar canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-4 .chart.chart-pie {
-    height: 100%;
-    line-height: 34px;
-}
-
-.info-box-4 .chart.chart-pie canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-4 .chart.chart-line {
-    height: 100%;
-    line-height: 40px;
-}
-
-.info-box-4 .chart.chart-line canvas {
-    vertical-align: baseline !important;
-}
-
-.info-box-4 .info-content {
-    display: inline-block;
-    padding: 7px 16px;
-}
-
-.info-box-4 .info-content .text {
-    font-size: 13px;
-    margin-top: 11px;
-}
-
-.info-box-4 .info-content .number {
-    font-weight: normal;
-    font-size: 26px;
-    margin-top: -4px;
-}
-
-.info-box-4.hover-zoom-effect .icon i,
-.info-box-4.hover-zoom-effect .icon i.mdi:before {
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.info-box-4.hover-zoom-effect:hover .icon i,
-.info-box-4.hover-zoom-effect:hover .icon i.mdi:before {
-    opacity: 0.4;
-    -moz-transform: rotate(-32deg) scale(1.4);
-    -ms-transform: rotate(-32deg) scale(1.4);
-    -o-transform: rotate(-32deg) scale(1.4);
-    -webkit-transform: rotate(-32deg) scale(1.4);
-    transform: rotate(-32deg) scale(1.4);
-}
-
-.info-box-4.hover-expand-effect:after {
-    background-color: rgba(0, 0, 0, 0.05);
-    content: ".";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 100%;
-    color: transparent;
-    -moz-transition: all 0.95s;
-    -o-transition: all 0.95s;
-    -webkit-transition: all 0.95s;
-    transition: all 0.95s;
-}
-
-.info-box-4.hover-expand-effect:hover:after {
-    width: 100%;
-}
 
 /* Alerts ====================================== */
 .alert {
@@ -3212,6 +2741,10 @@ input[type=range] + .thumb.active .value {
     border-bottom: 2px solid #fff !important;
 }
 
+.form-control[readonly] > [type="checkbox"] + label::after {
+    display: none;
+}
+
 .form-control.readonly .form-group {
     margin-bottom: 0px;
 }
@@ -3282,7 +2815,7 @@ input[type=range] + .thumb.active .value {
     border-bottom: 1px solid #ddd;
 }
 
-.form-group .form-control.no-bottom-border{
+.form-group .form-control.no-bottom-border {
     border-bottom: 0px;
 }
 
@@ -3520,22 +3053,33 @@ fieldset[disabled] .form-control {
 .nav-tabs > li > a .material-icons {
     position: relative;
     top: 6px;
-    margin-bottom: 8px;
     width: 24px;
-    line-height: 27px;
 }
 
 .nav-tabs > li > a .mdi {
     position: relative;
     top: 3px;
-    margin-bottom: 8px;
     width: 24px;
-    line-height: 28px;
     height: 24px;
 }
 
 .nav-tabs > li > a .mdi:before {
-    line-height: 34px;
+    line-height: 30px;
+}
+
+.nav-tabs > li > a span {
+    line-height: 36px;
+    margin-left: 5px;
+}
+
+.nav-tabs > li > a .clickable-icon {
+    padding-top: 0px;
+    margin-left: 5px;
+    margin-top: 2px;
+}
+
+.nav-tabs > li > a .clickable-icon::before {
+    line-height: 26px;
 }
 
 .nav-tabs li.active a:before {
@@ -4959,11 +4503,14 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     -ms-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
     border: none;
-    position: fixed;
     top: 0;
     left: 0;
-    z-index: 12;
     width: 100%;
+}
+
+.navbar.nav-fixed {
+    position: fixed;
+    z-index: 12;
 }
 
 .navbar .navbar-brand {
@@ -5037,10 +4584,6 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     transform: scale(0);
 }
 
-.ls-closed .navbar-brand {
-    margin-left: 30px;
-}
-
 .overlay-open .bars:before {
     -moz-transform: scale(0);
     -ms-transform: scale(0);
@@ -5058,18 +4601,16 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
 }
 
 .navbar-header {
-    padding: 10px 7px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    width: 100%;
+    min-height: 69px;
 }
 
 .navbar-header .bars {
     float: left;
     text-decoration: none;
-}
-
-.navbar-nav > li > a {
-    padding: 7px 7px 2px 7px;
-    margin-top: 17px;
-    margin-left: 5px;
 }
 
 
@@ -5120,9 +4661,9 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     font-family: "Roboto", sans-serif;
     background: #fdfdfd;
     display: inline-block;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 69px);
     position: fixed;
-    top: 70px;
+    top: 69px;
     margin-left: 0px;
     left: 0;
     -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
@@ -6308,96 +5849,7 @@ a.disabled {
     overflow-x: scroll;
 }
 
-/*======================== FLEX LAYOUT ========================*/
-.flex-layout {
-    display: flex;
-}
-/*
-LEFT_TO_RIGHT("row"),
-    RIGHT_TO_LEFT("row-reverse"),
-    TOP_TO_BOTTOM("column"),
-    BOTTOM_TO_TOP("column-reverse");
- */
-.flex-layout.flex-dir-row{
-    flex-direction: row;
-}
-.flex-layout.flex-dir-row-reverse{
-    flex-direction: row-reverse;
-}
-.flex-layout.flex-dir-column{
-    flex-direction: column;
-}
-.flex-layout.flex-dir-column-reverse{
-    flex-direction: column-reverse;
-}
 
-/*
-NO_WRAP("nowrap"),
-    WRAP_TOP_TO_BOTTOM("wrap"),
-    WRAP_BOTTOM_TO_TOP("wrap-reverse");
- */
-.flex-layout.flex-wrap-wrap{
-    flex-wrap: wrap;
-}
-.flex-layout.flex-wrap-nowrap{
-    flex-wrap: nowrap;
-}
-.flex-layout.flex-wrap-wrap-reverse{
-    flex-wrap: wrap-reverse;
-}
-
-/*
- START("flex-start"),
-    END("flex-end"),
-    CENTER("center"),
-    SPACE_BETWEEN("space-between"),
-    SPACE_AROUND("space-around"),
-    SPACE_EVENLY("space-evenly");
- */
-.flex-layout.flex-just-start{
-    justify-content: flex-start;
-}
-.flex-layout.flex-just-end{
-    justify-content: flex-end;
-}
-.flex-layout.flex-just-center{
-    justify-content: center;
-}
-.flex-layout.flex-just-space-between{
-    justify-content: space-between;
-}
-.flex-layout.flex-just-space-around{
-    justify-content: space-around;
-}
-.flex-layout.flex-just-space-evenly{
-    justify-content: space-evenly;
-}
-
-/*
-START("flex-start"),
-    END("flex-end"),
-    CENTER("center"),
-    STRETCH("stretch"),
-    BASE_LINE("base-line");
- */
-
-.flex-layout.flex-align-start{
-    align-items: flex-start;
-}
-.flex-layout.flex-align-end{
-    align-items: flex-end;
-}
-.flex-layout.flex-align-center{
-    align-items: center;
-}
-.flex-layout.flex-align-stretch{
-    align-items: stretch;
-}
-.flex-layout.flex-align-baseline{
-    align-items: baseline;
-}
-
-/*======================== FLEX LAYOUT END ========================*/
 .no-wrap {
     white-space: nowrap;
 }
@@ -6414,38 +5866,18 @@ START("flex-start"),
     margin-left: 83px;
 }
 
+.menu-toggle {
+    margin-right: 15px;
+}
+
+.logo-in {
+    margin-left: 15px;
+}
+
 .logo-in img {
-    margin-left: 25px;
     left: 25px;
-    position: absolute;
 }
 
-/* ==================== icons =================*/
-.clickable-icon {
-    width: 32px;
-    height: 32px;
-    padding-top: 4px;
-    border-radius: 50%;
-    cursor: pointer;
-    text-align: center;
-}
-
-.clickable-icon.small-icon {
-    width: 16px;
-    height: 16px;
-    line-height: 8px;
-    padding-left: 1px;
-    text-align: center;
-}
-
-.clickable-icon:HOVER {
-    opacity: 0.8;
-    background-color: #efefef;
-}
-
-.clickable-icon:disabled {
-    cursor: not-allowed;
-}
 
 /* =========================== Horizontal spin ======================== */
 .h-spin {
@@ -6565,16 +5997,6 @@ input[type=email].disabled-suggestions::-webkit-calendar-picker-indicator {
 /*========================= Telephone box ======================== */
 input[type=tel].disabled-suggestions::-webkit-calendar-picker-indicator {
     display: none;
-}
-
-.labeled-icon .right-node {
-    position: absolute;
-}
-
-.labeled-icon .text-node {
-    line-height: 30px;
-    margin-left: 5px;
-    margin-right: 5px;
 }
 
 /*========================= SuggestBox ======================== */
@@ -6755,4 +6177,8 @@ input[type=tel].disabled-suggestions::-webkit-calendar-picker-indicator {
 
 .vtabs .list .ml-tree li .ml-tree .ml-tree li a {
     padding-left: 95px;
+}
+
+.vtabs .flex-item a {
+    border-right: 2px solid transparent;
 }
