--- a/domino-ui-demo/plugins/stepper/materialize-stepper.css
+++ b/domino-ui-demo/plugins/stepper/materialize-stepper.css
@@ -28,6 +28,10 @@ ul.stepper {
     padding: 0 24px;
 }
 
+.step-body{
+    width: 100%;
+}
+
 @media only screen and (min-width: 993px) {
     ul.stepper.horizontal .step-content .step-body {
         position: absolute;
